# fpt

./: .gitignore  Cargo.toml  README.md
.devcontainer/: devcontainer.json
.github/workflows/: ci.yml
crates/fpt_api/: Cargo.toml
crates/fpt_api/src/: lib.rs  tests.rs
crates/fpt_api/src/btccom_api/: mod.rs
crates/fpt_api/src/coinpaprika_api/: mod.rs
crates/fpt_api/src/config/: mod.rs
crates/fpt_api/src/currency_api/: mod.rs
crates/fpt_api/src/database/: mod.rs
crates/fpt_api/src/ethplorer_api/: mod.rs
crates/fpt_api/src/paths/: get_assets.rs  get_pits.rs  mod.rs  remove_pit.rs  save_pit.rs  update_assets.rs  update_values.rs
crates/fpt_api/src/sparebank1_api/: mod.rs
crates/fpt_api/src/structures/: asset.rs  pit.rs
crates/fpt_bindings/: Cargo.toml
crates/fpt_bindings/src/: lib.rs  tests.rs
crates/fpt_bindings/src/btccom/: mod.rs
crates/fpt_bindings/src/coinbase/: mod.rs
crates/fpt_bindings/src/common/: mod.rs
crates/fpt_bindings/src/currency/: mod.rs
crates/fpt_bindings/src/ethplorer/: mod.rs
crates/fpt_bindings/src/sparebank1/: mod.rs
crates/fpt_common/: Cargo.toml
crates/fpt_common/src/: lib.rs
crates/fpt_common/src/config/: mod.rs
crates/fpt_common/src/structs/: asset.rs  mod.rs  pit.rs
crates/fpt_web/: Cargo.toml  build.rs
crates/fpt_web/src/: lib.rs
crates/fpt_web/src/paths/: files.rs
crates/fpt_web/src/serve/: files.rs
crates/fpt_web/src/www/: index.html
crates/fpt_web/www/: index.html  script.js  style.css
crates/fpt_web/www/scripts/: bindings.js  charts.js  common.js  loader.js  main.js
media/: colors.json
src/: main.rs
