[workspace]
members = ["crates/*"]

[package]
name = "fpt"
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
edition = "2021"
description = "Financial portfolio tracker"
repository = "https://github.com/jonassterud/fpt"
license = "MIT"

[dependencies]
fpt_api = { path = "crates/fpt_api" }
fpt_web = { path = "crates/fpt_web" }

tokio = { version = "1.23", features = ["rt-multi-thread", "macros"] }
anyhow = { version = "1.0", features = [] }
