[package]
name = "fpt_api"
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
edition = "2021"
description = "Financial portfolio tracker - API"
repository = "https://github.com/jonassterud/fpt"
license = "MIT"

[dependencies]
tokio = { version = "1.23", features = ["rt", "macros", "net"] }
actix-web = "4.2"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
rusqlite = { version = "0.28", features = ["bundled", "serde_json"] }
dotenv = "0.15"
ureq = { version = "2.5", features = ["json"] }
anyhow = "1.0"
