[package]
name = "fpt_api"
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
edition = "2021"
description = "Financial portfolio tracker - API"
repository = "https://github.com/jonassterud/fpt"
license = "MIT"

[dependencies]
tokio = { version = "1.23", features = ["rt", "macros", "net"] }
anyhow = { version = "1.0", features = [] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }

actix-web = { version = "4.2", features = [] }
actix-cors = { version = "0.6", features = [] }
ureq = { version = "2.5", features = ["json"] }
rusqlite = { version = "0.28", features = ["bundled", "serde_json"] }

toml = { version = "0.5", features = [] }
