[package]
name = "fpt_bindings"
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
edition = "2021"
description = "Financial portfolio tracker - bindings"
repository = "https://github.com/jonassterud/fpt"
license = "MIT"

[dependencies]
fpt_common = { path = "../fpt_common" }

anyhow = { version = "1.0", features = [] }

ureq = { version = "2.5", features = ["json"] }

serde = { version = "1.0", features = ["derive"] }
serde_json = { version = "1.0", features = [] }

base64 = { version = "0.13", features = [] }
hmac = { version = "0.12", features = [] }
sha2 = { version = "0.10", features = [] }
