[package]
name = "fpt_common"
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
edition = "2021"
description = "Financial portfolio tracker - common"
repository = "https://github.com/jonassterud/fpt"
license = "MIT"

[dependencies]
anyhow = { version = "1.0", features = [] }
serde = { version = "1.0", features = ["derive"] }
toml = { version = "0.5", features = [] }
