[package]
name = "fpt_web"
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
edition = "2021"
description = "Financial portfolio tracker - web server"
repository = "https://github.com/jonassterud/fpt"
license = "MIT"

[dependencies]
tokio = { version = "1.23", features = ["rt", "macros", "net"] }
actix-web = "4.2"
actix-files = "0.6"
anyhow = "1.0"
