[package]
name = "fpt_web"
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
edition = "2021"
description = "Financial portfolio tracker - web server"
repository = "https://github.com/jonassterud/fpt"
license = "MIT"

[dependencies]
tokio = { version = "1.23", features = ["rt", "macros", "net"] }
anyhow = { version = "1.0", features = [] }

actix-web = { version = "4.2", features = [] }
actix-files = { version = "0.6", features = [] }
actix-cors = { version = "0.6", features = [] }
