[package]
name = "fpt_web"
version = "0.0.0"
authors = ["Jonas Mathisrud Sterud <jonas.sterud@gmail.com>"]
edition = "2021"
description = "Financial portfolio tracker - web server"
repository = "https://github.com/jonassterud/fpt"
license = "MIT"

[dependencies]
tokio = { version = "1.23", features = ["rt", "macros", "net"] }
anyhow = { version = "1.0", features = [] }

actix-web = { version = "4.2", features = [] }
actix-web-static-files = { version = "4.0", features = [] }
static-files = { version = "0.2", features = [] }
actix-cors = { version = "0.6", features = [] }

[build-dependencies]
anyhow = { version = "1.0", features = [] }
static-files = { version = "0.2", features = [] }
minify-html-onepass = { version = "0.10", features = [] }
minifier = { version = "0.2", features = [] }
